...
    ScrollableTabRow(
      selectedTabIndex = selectedTabIndex
    ) {
      Tab(
        selected = selectedTabIndex == 0,
        onClick = { selectedTabIndex = 0 },
        text = { Text("गतिविधियां") }
      )
      Tab(
        selected = selectedTabIndex == 1,
        onClick = { selectedTabIndex = 1 },
        text = { Text("नयी गतिविधी बनायें") }
      )
...
