...
      Text(description)
    }

    if(keyPeople.isNotEmpty()){
      val sortedPeople = keyPeople.sortedBy { it.priority }
      Column() {
        Text("कार्यकारिणी/पदाधिकारी",
          style = MaterialTheme.typography.titleMedium,
          fontWeight = FontWeight.Bold,
          modifier = Modifier.padding(horizontal = 8.dp, vertical = 16.dp),
        )
      }
      FlowRow {
...
